# phaselab

./: .buildinfo  .coverage  .gitignore  API_GUIDE.html  CANCER_CRISPRA_WORKFLOW.html  CHRONOTHERAPY_OPTIMIZATION_RESEARCH.html  CLAIMS_AND_LIMITS.html  CONTRIBUTING.md  EXAMPLES.html  IDENTITY.html  METHODS_PAPER_OUTLINE.html  MULTI_TISSUE_CIRCADIAN_RESEARCH.html  PHASELAB_POSITIONING.html  PROTEIN_FOLDING_COHERENCE_RESEARCH.html  QUANTUM_MODE_GUIDANCE.html  RAI1_TILING_EXPERIMENT_SPEC.html  README.md  ROADMAP.html  SCN2A_GENE_THERAPY_RESEARCH.html  SMS_GENE_THERAPY_RESEARCH.html  TARGETS.html  TWO_STAGE_PERTURBATION_FRAMEWORK.html  changelog.html  citing.html  faq.html  genindex.html  index.html  installation.html  objects.inv  phaselab_hardware_validation_20251210_184833.json  py-modindex.html  pyproject.toml  quickstart.html  rai1_crispor.fa  rai1_guides.fa  search.html  searchindex.js
.github/workflows/: docs.yml  publish.yml
_modules/: index.html
_modules/phaselab/: quantum.html
_sources/: API_GUIDE.md.txt  CHRONOTHERAPY_OPTIMIZATION_RESEARCH.md.txt  EXAMPLES.md.txt  IDENTITY.md.txt  MULTI_TISSUE_CIRCADIAN_RESEARCH.md.txt  PROTEIN_FOLDING_COHERENCE_RESEARCH.md.txt  RAI1_TILING_EXPERIMENT_SPEC.md.txt  SMS_GENE_THERAPY_RESEARCH.md.txt  TARGETS.md.txt  changelog.rst.txt  citing.rst.txt  faq.rst.txt  installation.rst.txt  quickstart.rst.txt
_sources/developer/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/papers/: PAPER_1_PHASELAB_FRAMEWORK.md.txt  PAPER_2_CRISPRA_GRNA_DESIGN.md.txt
_sources/reference/: index.rst.txt
_sources/research/: index.rst.txt
_static/: custom.css
benchmarks/: benchmark_atlas_q_integration.py  benchmark_results.json
developer/: index.html
docs/: API_GUIDE.md  CANCER_CRISPRA_WORKFLOW.md  CLAIMS_AND_LIMITS.md  METHODS_PAPER_OUTLINE.md  Makefile  PHASELAB_POSITIONING.md  QUANTUM_MODE_GUIDANCE.md  ROADMAP.md  SCN2A_GENE_THERAPY_RESEARCH.md  SMS_GENE_THERAPY_RESEARCH.md  TARGETS.md  TWO_STAGE_PERTURBATION_FRAMEWORK.md  changelog.rst  conf.py  index.rst  quickstart.rst  requirements.txt
docs/papers/: PAPER_1_PHASELAB_FRAMEWORK.md  PAPER_2_CRISPRA_GRNA_DESIGN.md  PAPER_3_CIRCADIAN_MODELING.md  README.md
docs/preprints/: crispra_binding_register_preprint.md
examples/: ibm_hardware_validation.py  index.html  quickstart_crispr_design.ipynb  sms_gene_therapy.py
papers/: PAPER_1_PHASELAB_FRAMEWORK.html  PAPER_2_CRISPRA_GRNA_DESIGN.html  PAPER_3_CIRCADIAN_MODELING.html  README.html
preprints/: crispra_binding_register_preprint.html
reference/: index.html
research/: index.html
src/phaselab/: __init__.py
src/phaselab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  bench_atlas_q.py  test_claim_levels.py  test_context.py  test_crispr.py  test_enhanced_pipeline.py  test_fusion.py  test_predictors.py  test_quantum_module.py  test_sms_trials.py
user_guide/explanations/: index.html  (+7 more)
(+183 files in other folders)
