[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phaselab"
version = "1.0.0"
description = "Reliability layer for perturbation science - spatial coherence analysis across CRISPR, protein, and chemical domains"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dylan Vaca", email = "dylan@phaselab.dev"}
]
maintainers = [
    {name = "Dylan Vaca", email = "dylan@phaselab.dev"}
]
keywords = [
    "perturbation biology",
    "spatial coherence",
    "reliability assessment",
    "CRISPR",
    "CRISPRa",
    "CRISPRi",
    "deep mutational scanning",
    "DMS",
    "protein engineering",
    "drug discovery",
    "gene therapy",
    "reproducibility",
    "variance reduction",
    "tiling screens",
    "response landscapes",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "qiskit-ibm-runtime>=0.20",
    "atlas-quantum>=0.6.3",
]
plotting = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
]
chromatin = [
    "pyBigWig>=0.3",  # BigWig file access for ATAC-seq
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1",
]
all = [
    "phaselab[quantum,plotting,chromatin,dev]",
]

[project.urls]
Homepage = "https://github.com/followthesapper/phaselab"
Documentation = "https://followthesapper.github.io/phaselab/"
Repository = "https://github.com/followthesapper/phaselab"
Issues = "https://github.com/followthesapper/phaselab/issues"

[project.scripts]
phaselab = "phaselab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phaselab = ["py.typed", "targets/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=phaselab --cov-report=term-missing"
